--- a/crates/mes-jni/Cargo.toml
+++ b/crates/mes-jni/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 jni = "0.21.1"
-mes-core = { path = "../mes-core" }
-mes-data = { path = "../mes-data" }
+mes-core = { path = "../mes-core", features = ["json"] }
 
 [lib]
 crate-type = ["cdylib"]
