fix(deps): add maven in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,10 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+
+  - package-ecosystem: "maven"
+    directories:
+      - "/android"
+      - "/android/app"
+    schedule:
+      interval: "weekly"
